--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
+    "migrate.dev": "pnpm drizzle-kit generate && pnpm drizzle-kit migrate",
+    "prestart:debug": "pnpm migrate.dev",
+    "prestart:dev": "pnpm migrate.dev",
+    "migrate.prod": "pnpm drizzle-kit migrate",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
@@ -25,6 +29,8 @@
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.0",
     "@nestjs/core": "^11.0.1",
+    "@nestjs/event-emitter": "^3.0.0",
+    "@nestjs/jwt": "^11.0.0",
     "@nestjs/passport": "^11.0.4",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/swagger": "^11.0.2",
