feat: campaign crud endpoints + connection endpoints done

--- a/package.json
+++ b/package.json
@@ -34,9 +34,12 @@
     "@nestjs/passport": "^11.0.4",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/swagger": "^11.0.2",
+    "@scalar/nestjs-api-reference": "^0.3.177",
     "drizzle-orm": "^0.38.4",
     "drizzle-zod": "^0.6.1",
+    "google-libphonenumber": "^3.2.40",
     "lru-cache": "^11.0.2",
+    "nestjs-zod": "^4.2.0",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.1",
@@ -56,6 +59,7 @@
     "@swc/cli": "^0.6.0",
     "@swc/core": "^1.10.7",
     "@types/express": "^5.0.0",
+    "@types/google-libphonenumber": "^7.4.30",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.10.7",
     "@types/passport": "^1.0.17",
