--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+    "drop": "pnpm drizzle-kit drop",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "db.seed": "pnpm tsx scripts/seed.ts",
     "tunnel": "pnpm tsx scripts/tunnel/index.ts"
