--- a/.github/workflows/render-deploy.yml
+++ b/.github/workflows/render-deploy.yml
@@ -46,4 +46,4 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           push: true,
-          tags: brinestone/tellthem-api:${{ github.ref_name }}
+          tags: brinestone/tellthem-api:prelude
