--- a/.github/workflows/render-deploy.yml
+++ b/.github/workflows/render-deploy.yml
@@ -1,6 +1,7 @@
 name: Render Deployment
 
 on:
+  workflow_dispatch:
   push:
     branches:
       - next
@@ -15,9 +16,15 @@ jobs:
       DOCKER_USERNAME: ${{ vars.DOCKER_USER }}
       DOCKER_TOKEN: ${{ secrets.DOCKER_PWD }}
       DATABASE_URL: ${{ secrets.PROD_DB }}
+      SYSTEM_WALLET: ${{ secrets.SYSTEM_WALLET }}
+      SYSTEM_STARTING_BALANCE: ${{ vars.SYSTEM_STARTING_BALANCE }}
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v4
+      - name: Setup Node
+        uses: actions/setup-node@v4
+        with:
+          node-version-file: package.json
       - name: Install PNPM
         run: npm install -g pnpm
       - name: Get Store Path
@@ -42,10 +49,14 @@ jobs:
         run: pnpm migrate.prod
       - name: Seed Database
         run: pnpm db.seed
-      - name: Setup Buildx
-        uses: docker/setup-buildx-action@v3
-      - name: Build Image
-        uses: docker/build-push-action@v6
-        with:
-          push: true,
-          tags: brinestone/tellthem-api:prelude
+      - name: Build ⚙️
+        run: pnpm build
+      - name: Build Docker Image ⚙️
+        id: docker-build
+        run: |
+          docker build . -t ${{ env.DOCKER_USERNAME }}/tellthem-api:$(echo "${{github.ref_name}}" | cut -d "/" -d "v" -f 2)
+          echo "image-name=\"${{ env.DOCKER_USERNAME }}/tellthem-api:$(echo "${{github.ref_name}}" | cut -d "/" -d "v" -f 2)\"\n" >> $GITHUB_OUTPUT
+      - name: Docker Push ⬆️
+        run: |
+          docker login -u ${{ env.DOCKER_USERNAME }} -p ${{ env.DOCKER_TOKEN }}
+          docker push ${{ steps.docker-build.outputs.image-name }}
