--- a/.github/workflows/render-deploy.yml
+++ b/.github/workflows/render-deploy.yml
@@ -54,8 +54,8 @@ jobs:
       - name: Build Docker Image ⚙️
         id: docker-build
         run: |
-          docker build . -t ${{ env.DOCKER_USERNAME }}/tellthem-api:$(echo "${{github.ref_name}}" | cut -d "/" -d "v" -f 2)
-          echo "image-name=\"${{ env.DOCKER_USERNAME }}/tellthem-api:$(echo "${{github.ref_name}}" | cut -d "/" -d "v" -f 2)\"\n" >> $GITHUB_OUTPUT
+          docker build . -t ${{ env.DOCKER_USERNAME }}/tellthem-api:prelude
+          echo "image-name=\"${{ env.DOCKER_USERNAME }}/tellthem-api:prelude\"\n" >> $GITHUB_OUTPUT
       - name: Docker Push ⬆️
         run: |
           docker login -u ${{ env.DOCKER_USERNAME }} -p ${{ env.DOCKER_TOKEN }}
