--- a/.github/workflows/render-deploy.yml
+++ b/.github/workflows/render-deploy.yml
@@ -5,7 +5,6 @@ on:
   push:
     branches:
       - next
-      - f/*
     tags:
       - v*
 
@@ -45,16 +44,40 @@ jobs:
       - name: Install Dependencies 📦
         if: steps.setup-cache.outputs.cache-hit != 'true'
         run: pnpm i
-      - name: Migrate Database Schema
-        run: pnpm migrate.prod
-      - name: Seed Database
-        run: pnpm db.seed
+      - name: Migrate Staging Database Schema
+        if: github.ref_type == 'branch' && github.ref_name == 'next'
+        env:
+          DATABASE_URL: ${{ secrets.STAGING_DB }}
+          SYSTEM_WALLET: ${{ secrets.STAGING_WALLET }}
+        run: |
+          pnpm migrate.prod
+          pnpm db.seed
+      - name: Migrate Production Database Schema
+        if: github.ref_type == 'tag'
+        env:
+          DATABASE_URL: ${{ secrets.PROD_DB }}
+          SYSTEM_STARTING_BALANCE: 0
+        run: |
+          pnpm migrate.prod
+          pnpm db.seed
       - name: Build ⚙️
         run: pnpm build
-      - name: Build Docker Image ⚙️
+      - name: Docker login
+        run: echo ${{ env.DOCKER_TOKEN }} | docker login -u ${{ env.DOCKER_USERNAME }}
+      - name: Docker Push Staging ⬆️
+        if: github.ref_name == 'next' && github.ref_type == 'branch'
+        env:
+          DEPLOY_URL: ${{ secrets.STAGING_DEPLOY_HOOK }}
         run: |
-          docker build . -t ${{ env.DOCKER_USERNAME }}/tellthem-api:prelude
-      - name: Docker Push ⬆️
+          docker build . -t ${{ env.DOCKER_USERNAME }}/tellthem-api:staging
+          docker push ${{ env.DOCKER_USERNAME }}/tellthem-api:staging
+          curl "${{ env.DEPLOY_URL }}"
+      - name: Docker Push Production ⬆️
+        if: github.ref_type == 'tag'
+        env:
+          DEPLOY_URL: ${{ secrets.PROD_DEPLOY_HOOK }}
         run: |
-          docker login -u ${{ env.DOCKER_USERNAME }} -p ${{ env.DOCKER_TOKEN }}
-          docker push ${{ env.DOCKER_USERNAME }}/tellthem-api:prelude
+          docker build . -t ${{ env.DOCKER_USERNAME }}/tellthem-api:latest -t ${{ env.DOCKER_USERNAME}}/tellthem-api:${{ github.ref_name }}
+          docker push ${{ env.DOCKER_USERNAME }}/tellthem-api:latest
+          docker push ${{ env.DOCKER_USERNAME}}/tellthem-api:${{ github.ref_name }}
+          curl "${{ env.DEPLOY_URL }}"
