--- a/package.json
+++ b/package.json
@@ -19,8 +19,6 @@
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "migrate.dev": "pnpm drizzle-kit generate && pnpm drizzle-kit migrate",
-    "prestart:debug": "pnpm migrate.dev",
-    "prestart:dev": "pnpm migrate.dev",
     "migrate.prod": "pnpm drizzle-kit migrate",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
@@ -66,6 +64,7 @@
     "@nestjs/testing": "^11.0.1",
     "@swc/cli": "^0.6.0",
     "@swc/core": "^1.10.7",
+    "@types/bun": "latest",
     "@types/express": "^5.0.0",
     "@types/google-libphonenumber": "^7.4.30",
     "@types/jest": "^29.5.14",
@@ -111,5 +110,16 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
+  },
+  "pnpm": {
+    "ignoredBuiltDependencies": [
+      "@nestjs/core",
+      "@scarf/scarf",
+      "ngrok"
+    ],
+    "onlyBuiltDependencies": [
+      "@swc/core",
+      "esbuild"
+    ]
   }
 }
